--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
     "lib": ["es6", "dom", "es2017"],
     "target": "es5",
     "noImplicitAny": true,
-    "sourceMap": true
+    "sourceMap": true,
+    "esModuleInterop": true
   },
-  "include": ["*.ts"]
+  "include": ["**/*.ts",]
 }
